# cpp-design-patterns

./: .gitignore  README.md
creational-patterns/: CMakeLists.txt
creational-patterns/abstract-factory/: CMakeLists.txt  main.cpp
creational-patterns/abstract-factory/authentication-and-notification/: AuthenticationMethod.h  CMakeLists.txt  NotificationMethod.h  TwoFactorAuthentication.cpp  TwoFactorAuthentication.h  main.cpp
creational-patterns/abstract-factory/authentication-and-notification/email/: EmailAuthenticationMethod.cpp  EmailAuthenticationMethod.h  EmailNotificationMethod.cpp  EmailNotificationMethod.h  EmailTwoFactor.cpp  EmailTwoFactor.h
creational-patterns/abstract-factory/authentication-and-notification/message/: MessageAuthenticationMethod.cpp  MessageAuthenticationMethod.h  MessageNotificationMethod.cpp  MessageNotificationMethod.h  MessageTwoFactor.cpp  MessageTwoFactor.h
creational-patterns/builder/: CMakeLists.txt
creational-patterns/builder/pizza-restaurant/: CMakeLists.txt  main.cpp
creational-patterns/factory/: CMakeLists.txt
creational-patterns/factory/two-factor-authentication/: CMakeLists.txt  TwoFactorAuthentication.cpp  TwoFactorAuthentication.h  main.cpp  single_file_main.cpp
creational-patterns/factory/two-factor-authentication/email/: EmailAuthentication.cpp  EmailAuthentication.h  EmailAuthenticationMethod.cpp  EmailAuthenticationMethod.h
creational-patterns/factory/two-factor-authentication/message/: MessageAuthentication.cpp  MessageAuthentication.h  MessageAuthenticationMethod.cpp
